xidlc/tests/snapshots/codegen_snapshot__ts__http_header.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_header.client.ts
===============
// Generated by xidlc. DO NOT EDIT.
import type*as types from"./http_header";
import*as zodSchemas from"./http_header.iface.zod";
export type FetchLike = (
input : RequestInfo | URL, init ? : RequestInit
) => Promise<
Response
>;
export interface ClientOptions{
    fetch ? : FetchLike;
    headers ? : Record<
    string, string
    >;
}

export class XidlClientError extends Error{
    readonly code : number;
    readonly status : number;
    constructor(
    message : string, code : number, status : number
    ){
        super(
        message
        );
        this.code = code;
        this.status = status;
    }
}

function resolveFetch(
fetchImpl ? : FetchLike
) : FetchLike{
    if(fetchImpl){
        return fetchImpl;
    }

    return window.fetch.bind(
    undefined
    );
}

function joinUrl(
baseUrl : string, path : string
) : string{
    if(baseUrl.endsWith(
    "/"
    )&&path.startsWith(
    "/"
    )){
        return`${baseUrl}${path.slice(
            1
            )}`;
    }
    if(!baseUrl.endsWith(
    "/"
    )&&!path.startsWith(
    "/"
    )){
        return`${baseUrl}/${path}`;
    }
    return`${baseUrl}${path}`;
}

function encodePathSegment(
value : unknown
) : string{
    return encodeURIComponent(
    String(
    value
    )
    );
}

function encodePathCatchAll(
value : unknown
) : string{
    return String(
    value
    )
    .split(
    "/"
    )
    .map(
    (
    segment
    ) => encodeURIComponent(
    segment
    )
    )
    .join(
    "/"
    );
}

function encodeQueryValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

function encodeHeaderValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

function encodeCookieValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

async function parseXidlError(
resp : Response
) : Promise<
XidlClientError
>{
    const status = resp.status;
    try{
        const body = await resp.json(

        );
        if(body&&typeof body.code==="number"&&typeof body.msg==="string"){
            return new XidlClientError(
            body.msg, body.code, status
            );
        }
    }catch{
        // ignored
    }
    return new XidlClientError(
    `http error: ${status}`, status, status
    );
}

async function*sseJsonStream<T>(
fetchImpl : FetchLike, url : string, options : RequestInit,
) : AsyncIterable<
T
>{
    const headers = new Headers(
    options.headers??{
    }
    );
    if(!headers.has(
    "Accept"
    )){
        headers.set(
        "Accept", "text/event-stream"
        );
    }
    const resp = await fetchImpl(
    url, {
        ...options, headers
    }
    );
    if(!resp.ok){
        throw await parseXidlError(
        resp
        );
    }
    if(!resp.body){
        throw new XidlClientError(
        "sse response has no body", 500, resp.status
        );
    }

    const reader = resp.body.getReader(

    );
    const decoder = new TextDecoder(

    );
    let buffer = "";
    let event = "message";
    let dataLines : string[] = [

    ];
    const flushEvent = (

    ) : {
        done : boolean;
        value ? : T} | null => {
        if(event.length===0&&dataLines.length===0){
            return null;
        }
        const payload = dataLines.join(
        "\n"
        );
        const currentEvent = event||"message";
        event = "message";
        dataLines = [

        ];
        if(currentEvent==="complete"){
            return{
                done : true
            };
        }
        if(currentEvent==="error"){
            let msg = payload;
            let code = 500;
            try{
                const parsed = JSON.parse(
                payload
                );
                if(parsed&&typeof parsed.msg==="string"){
                    msg = parsed.msg;
                }
                if(parsed&&typeof parsed.code==="number"){
                    code = parsed.code;
                }
            }catch{
                // keep raw payload
            }
            throw new XidlClientError(
            msg||"stream error", code, resp.status
            );
        }
        if(currentEvent==="next"||currentEvent==="message"){
            return{
                done : false, value : JSON.parse(
                payload
                )as T
            };
        }
        return null;

    };
    while(true){
        const{value, done} = await reader.read(

        );
        if(done){
            break;
        }
        buffer+=decoder.decode(
        value, {
            stream : true
        }
        );
        while(true){
            const idx = buffer.indexOf(
            "\n"
            );
            if(idx<0){
                break;
            }
            const line = buffer.slice(
            0, idx
            ).replace(
            /\r$/, ""
            );
            buffer = buffer.slice(
            idx+1
            );
            if(line.length===0){
                const flushed = flushEvent(

                );
                if(flushed?.done){
                    return;
                }
                if(flushed?.value!==undefined){
                    yield flushed.value;
                }
                continue;
            }
            if(line.startsWith(
            ":"
            )){
                continue;
            }
            if(line.startsWith(
            "event:"
            )){
                event = line.slice(
                "event:".length
                ).trim(

                );
                continue;
            }
            if(line.startsWith(
            "data:"
            )){
                dataLines.push(
                line.slice(
                "data:".length
                ).trimStart(

                )
                );
            }
        }
    }
}

function ndjsonBody<T>(
source : AsyncIterable<
T
>
) : ReadableStream<
Uint8Array
>{
    const encoder = new TextEncoder(

    );
    const iterator = source[Symbol.asyncIterator](

    );
    return new ReadableStream<
    Uint8Array
    >(
    {
        async pull(
        controller
        ){
            const next = await iterator.next(

            );
            if(next.done){
                controller.close(

                );
                return;
            }
            controller.enqueue(
            encoder.encode(
            `${JSON.stringify(
                next.value
                )}\n`
            )
            );

        }, async cancel(

        ){
            if(iterator.return){
                await iterator.return(

                );
            }
        },
    }
    );
}

export namespace test{
    export class HeaderServiceClient{
        private readonly baseUrl : string;
        private readonly fetchImpl : FetchLike;
        private readonly defaultHeaders : Record<
        string, string
        >;
        constructor(
        baseUrl : string, options : ClientOptions = {
        }
        ){
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(
            options.fetch
            );
            this.defaultHeaders = options.headers??{
            };
        }

        async get_user(
        id : number, req_id : string, flags : Array<
        string
        >, age : number, session_id : string, prefs : Array<
        string
        >
        ) : Promise<
        types.User
        >{
            const parsed = zodSchemas.test.HeaderServiceGetUserRequestSchema.parse(
            {
                "id" : id, "req_id" : req_id, "flags" : flags, "age" : age, "session_id" : session_id, "prefs" : prefs
            }
            );
            let path = "/v1/headers/{id}";
            path = path.replace(
            "{"+"id"+"}", encodePathSegment(
            parsed["id"]
            )
            );
            const headers = new Headers(
            this.defaultHeaders
            );
            headers.set(
            "X-Req-Id", encodeHeaderValue(
            parsed["req_id"]
            )
            );
            for(const value of parsed["flags"]){
                headers.append(
                "X-Flags", encodeHeaderValue(
                value
                )
                );
            }
            headers.set(
            "X-Age", encodeHeaderValue(
            parsed["age"]
            )
            );
            const cookiePairs : string[] = [

            ];
            cookiePairs.push(
            `${"sid"}=${encodeCookieValue(
                parsed["session_id"]
                )}`
            );
            for(const value of parsed["prefs"]){
                cookiePairs.push(
                `${"pref"}=${encodeCookieValue(
                    value
                    )}`
                );
            }
            if(cookiePairs.length>0){
                const cookieValue = cookiePairs.join(
                "; "
                );
                const existing = headers.get(
                "Cookie"
                );
                headers.set(
                "Cookie", existing ?`${existing}; ${cookieValue}` : cookieValue
                );
            }

            const options = {
                method : "GET", headers
            };
            const url = joinUrl(
            this.baseUrl, path
            );
            const resp = await this.fetchImpl(
            url, options
            );
            if(!resp.ok){
                throw await parseXidlError(
                resp
                );
            }
            const data = await resp.json(

            );
            return data as types.User;
        }

        async create_user(
        token : string, session_id : string, name : string
        ) : Promise<
        void
        >{
            const parsed = zodSchemas.test.HeaderServiceCreateUserRequestSchema.parse(
            {
                "token" : token, "session_id" : session_id, "name" : name
            }
            );
            let path = "/v1/headers";
            const body = parsed["name"];
            const headers = new Headers(
            this.defaultHeaders
            );
            headers.set(
            "X-Token", encodeHeaderValue(
            parsed["token"]
            )
            );
            const cookiePairs : string[] = [

            ];
            cookiePairs.push(
            `${"sid"}=${encodeCookieValue(
                parsed["session_id"]
                )}`
            );
            if(cookiePairs.length>0){
                const cookieValue = cookiePairs.join(
                "; "
                );
                const existing = headers.get(
                "Cookie"
                );
                headers.set(
                "Cookie", existing ?`${existing}; ${cookieValue}` : cookieValue
                );
            }

            headers.set(
            "Content-Type", "application/json"
            );
            const options = {
                method : "POST", headers, body : JSON.stringify(
                body
                )
            };
            const url = joinUrl(
            this.baseUrl, path
            );
            const resp = await this.fetchImpl(
            url, options
            );
            if(!resp.ok){
                throw await parseXidlError(
                resp
                );
            }
            return;
        }
    }
}
===============
http_header.d.ts
===============
// Generated by xidlc. DO NOT EDIT.
export namespace test{
    export type Status = "ok" | "FAILED";
    export interface User{
        id : number;
        full_name : string;
        status : Status;
    }
}
===============
http_header.iface.d.ts
===============
// Generated by xidlc. DO NOT EDIT.
export namespace test{
    export interface HeaderServiceGetUserRequest{
        id : number;
        req_id : string;
        flags : Array<
        string
        >;
        age : number;
        session_id : string;
        prefs : Array<
        string
        >;
    }

    export interface HeaderServiceCreateUserRequest{
        token : string;
        session_id : string;
        name : string;
    }
}
===============
http_header.iface.zod.ts
===============
// Generated by xidlc. DO NOT EDIT.
import{z}from"zod";
export namespace test{
    export const HeaderServiceGetUserRequestSchema = z.object(
    {
        id : z.number(

        ).int(

        ).nonnegative(

        ), req_id : z.string(

        ), flags : z.array(
        z.string(

        )
        ), age : z.number(

        ).int(

        ).nonnegative(

        ), session_id : z.string(

        ), prefs : z.array(
        z.string(

        )
        ),
    }
    );
    export type HeaderServiceGetUserRequest = z.infer<
    typeof HeaderServiceGetUserRequestSchema
    >;
    export const HeaderServiceCreateUserRequestSchema = z.object(
    {
        token : z.string(

        ), session_id : z.string(

        ), name : z.string(

        ),
    }
    );
    export type HeaderServiceCreateUserRequest = z.infer<
    typeof HeaderServiceCreateUserRequestSchema
    >;
}
===============
http_header.rs
===============
pub mod test {
    #[derive(Debug, Clone, Copy, PartialEq, Eq, Default)]
    pub enum Status {
        #[default]
        OK,
        FAILED,
    }
    #[derive(Default)]
    pub struct User {
        pub id: u32,
        pub name: String,
        pub status: Status,
    }
    impl User {}
}
===============
http_header.zod.ts
===============
// Generated by xidlc. DO NOT EDIT.
import{z}from"zod";
export namespace test{
    export const StatusSchema = z.enum(
    [
    "ok", "FAILED"
    ]
    );
    export type Status = z.infer<
    typeof StatusSchema
    >;
    export const UserSchema = z.object(
    {
        id : z.number(

        ).int(

        ).nonnegative(

        ), full_name : z.string(

        ), status : StatusSchema,
    }
    );
    export type User = z.infer<
    typeof UserSchema
    >;
}
